stable-sort/tests/02-not-enum-or-struct.stderr
error: expected struct or enum
 --> tests/02-not-enum-or-struct.rs:3:1
  |
3 | #[stable_sorted]
  | ^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `stable_sorted` (in Nightly builds, run with -Z macro-backtrace for more info)
