stable-sort/tests/02-not-enum-or-struct.rs
use stable_sort::stable_sorted;

#[stable_sorted]
fn main() {}
